More Space & Alignment Fixes! 📐

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,7 +343,7 @@ footer {
 
     /* Reduce About Section Gap */
     #about {
-        padding-top: 50px !important;
+        padding-top: 0px !important;
         padding-bottom: 50px !important;
     }
 
